法規文字修正

--- a/event_2.html
+++ b/event_2.html
@@ -101,8 +101,12 @@
               活動期間每日18:00-21:00起於新勢公園(飛天曙光燈區)、老街溪河岸公園(銀河曙光燈區)、光明公園(大地曙光燈區)服務台憑市民卡登錄，即可兌換紀念品一份(一卡一份)，數量有限，送完為止。還有機會抽「EMOVING Shine電動自行車」1台(市價42,000元) 。
             </span>
             <a href="https://card.tycg.gov.tw/ap/index.aspx" target="_blank">桃園市民卡主題網：https://card.tycg.gov.tw/ap/index.aspx</a>
-            <span class='s_span'>※ 得獎者須依中華民國稅法規定，繳交相關稅費。</span>
-            <span class='s_span'>※ 車輛顏色以實際出車顏色為主，照片僅供參考。</span>
+            
+            <span class='s_span'><b>※ 依中華民國稅法，中獎者須遵守以下規定：</b>
+              贈品金額超過$1,001（含）以上者，須開立扣繳憑單。贈品金額超過$20,000（含）以上者，須繳交10%機會中獎稅；非國內居住的個人，不限中獎金額，需繳交20%機會中獎稅及需自付運費。
+            </span>
+            <span class='s_span'><b>※ </b>車輛顏色以實際出車顏色為主，照片僅供參考。</span>
+
             </br></br>
             <img src="img/acpic012.jpg">
             </br></br>
