--- a/news.html
+++ b/news.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
     <meta http-equiv="Content-Language" content="zh-tw">
@@ -46,7 +46,7 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://lanternfestival.neocities.org/DM.html" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
         <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
         <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
@@ -84,6 +84,27 @@
         </div>
 
         <div class='page_cent'>
+
+            <div class='news_box'>
+              <div class='n_date'>2020.02.01</div>
+              <a class='n_titel n_outlink' href='https://www.tycg.gov.tw/ch/home.jsp?id=9&parentpath=0,1&mcustomize=multimessage_view.jsp&dataserno=202001310003&aplistdn=ou=news,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y' target="_blank">2020桃園燈會璀璨登場，老街溪沿岸3大燈區、7大創新特色，感受「光之桃花源」</a>
+            </div>
+
+            <div class='news_box'>
+              <div class='n_date'>2020.01.29</div>
+              <a class='n_titel n_outlink' href='news1.html' target="_blank">因應武漢肺炎疫情 桃園市政府將加強防疫措施並呼籲民眾共同配合</a>
+            </div>
+
+            <!-- <div class='n_date'>2020.01.29</div> -->
+            <!-- <a class='n_titel n_outlink' href='news1.html' target="_blank">因應武漢肺炎疫情 桃園市政府將加強防疫措施並呼籲民眾共同配合</a><br><br> -->
+<!--<p class='n_titel n_outlink' >2020桃園燈會自1月31日起於平鎮至中壢老街溪沿岸登場，因應近日中國大陸武漢肺炎疫情，桃園市政府呼籲民眾共同配合提高防護措施：<br>
+<br>
+1.注意保暖，勤洗手，維持手部清潔。<br>
+2.活動現場各服務區醫護站醫護人員及部份工作人員將提供75％酒精提供民眾噴灑雙手，燈會美食區亦將提高休息區座位消毒頻率。<br>
+3.建議參觀民眾配戴口罩，如有呼吸道症狀務必配戴口罩，倘民眾有身體不適狀況，可先至醫護站，由醫護人員初步判斷後，協助通報就近醫院處理。如自中國返回有呼吸道症狀者，請在家休息直至康復。<br>
+4.如發佈相關防疫措施，桃園市政府將全力配合中央防疫，視情況調整燈會展期規劃。<br>
+</p>-->
+
           <div class='news_box'>
             <div class='n_date'>2020.01.20</div>
             <a class='n_titel n_outlink' href='https://youtu.be/qeoyLTYpdPo' target="_blank">2020桃園燈會主題曲「曙光」mv</a>
