--- a/news1.html
+++ b/news1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
     <meta http-equiv="Content-Language" content="zh-tw">
@@ -40,20 +40,20 @@
 
       gtag('config', 'AW-672890273');
     </script>
+
   </head>
   
-  <!-- class='index_he' -->
   <body>
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://lanternfestival.neocities.org/DM.html" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
         <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
         <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
 
-      <div class='i_menu'><a class='aac' href="index.html">首&nbsp;&nbsp;頁</a></div>
-      <div class='i_menu'><a href="news.html">最新消息</a></div>
+      <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
+      <div class='i_menu'><a class='aac' href="news.html">最新消息</a></div>
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
       <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
@@ -67,6 +67,7 @@
 
     <!-- mobile -->
     <div class='mobile_boxs no_show'>
+      <a href="index.html">首&nbsp;&nbsp;頁</a>
       <a href="news.html">最新消息</a>
       <a href="about.html">關於桃園燈節</a>
       <a href="lantern_1.html">燈區介紹</a>
@@ -75,14 +76,37 @@
       <a href="traffic.html">交通資訊</a>
     </div>
 
- 
-    <div class='i_cent_boxs'>
-      <img class='in_mouse' src="img/in_image.png">
-      <img class='in_mouse_m' src="img/index_m.png">
-      <img class='note' src="img/note.jpg">
+
+    <div class='cent_boxs'>
+      <div class='cent_box'>
+        <div class='tag_boxs'>
+          <a class='tag_a' href="index.html">首頁</a>
+          <a class='tag_a' href="news.html">最新消息</a>
+        </div>
+
+        <div class='page_cent'>
+          <div class='news_box'>
+            <div class='n_date'>因應武漢肺炎疫情 桃園市政府將加強防疫措施並呼籲民眾共同配合</div>
+          </div>
+
+          <div class='news_box'>
+            <p class='p_cent_type pad20'>2020桃園燈會自1月31日起於平鎮至中壢老街溪沿岸登場，因應近日中國大陸武漢肺炎疫情，桃園市政府呼籲民眾共同配合提高防護措施：<br>
+<br>
+1.注意保暖，勤洗手，維持手部清潔。<br>
+2.活動現場各服務區醫護站醫護人員及部份工作人員將提供75％酒精提供民眾噴灑雙手，燈會美食區亦將提高休息區座位消毒頻率。<br>
+3.建議參觀民眾配戴口罩，如有呼吸道症狀務必配戴口罩，倘民眾有身體不適狀況，可先至醫護站，由醫護人員初步判斷後，協助通報就近醫院處理。如自中國返回有呼吸道症狀者，請在家休息直至康復。<br>
+4.如發佈相關防疫措施，桃園市政府將全力配合中央防疫，視情況調整燈會展期規劃。<br></p>
+          </div>
+
+          
+
+          <!--<img class='all_img' src="img/a01.jpg">-->
+        </div>
+      </div>
     </div>
 
-    <div class='in_footer'>
+
+    <div class='in_footer no_ma'>
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>指導單位：</p>
         <p class='f_type fw90'>桃園市政府、桃園市議會</p>
@@ -104,8 +128,8 @@
       </div>
     </div>
 
-    <div class="it_l"><img src="img/it_l.png"></div>
-    <div class="it_r"><img src="img/it_r.png"></div>
+    <div class="it_l"><img src="img/p_top_l.png"></div>
+    <div class="it_r"><img src="img/p_top_r.png"></div>
     <div class="if_l"><img src="img/if_l.png"></div>
     <div class="if_r"><img src="img/if_r.png"></div>
 
