接駁車更新

--- a/traffic.html
+++ b/traffic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
     <meta http-equiv="Content-Language" content="zh-tw">
@@ -63,7 +63,7 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://lanternfestival.neocities.org/DM.html" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
         <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
         <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
@@ -136,7 +136,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3832.2835383343613!2d121.21724240891598!3d24.95951452059277!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27a93f4eb17f9f7!2z6ICB6KGX5rqq5rKz5bK45YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1578919778638!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
         </br></br>
-        <img class='all_img' src="img/tra01.png">
+        <img class='all_img' src="img/tra03.png">
         </br></br>
       </div>
     </div>
