--- a/traffic_02.html
+++ b/traffic_02.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
     <meta http-equiv="Content-Language" content="zh-tw">
@@ -63,7 +63,7 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://lanternfestival.neocities.org/DM.html" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
         <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
         <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
@@ -206,6 +206,25 @@
           <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1vexH0Hiv6Cgj6BEg-1oF4seayD3Jmcxq" width="640" height="480"></iframe>
         </div>
 
+        <!-- 免費接駁車03 -->
+        </br></br>
+        <div class='show_boxs'>
+          <div class='show_box'>
+            <div class='sb_l'><!--<img src="img/tt02.png">--></div>
+            <div class='sb_r sb_all'>
+              <div class='s_name' title="免費接駁車：">藍線</div>
+              <div class='s_type'>
+              燈會展區接駁車晚上6:00從機場捷運A21環北站開始 <br>
+
+              路線：機場捷運A21環北站->銀河曙光燈區->飛天曙光燈區->銀河曙光燈區->機場捷運A21環北站<br>
+              間距：20分鐘一班<br>
+              路線顏色：藍線<br>
+              站牌位置：銀河曙光燈區(雙邊下車/站牌位置:興國市場站)；飛天曙光燈區(單邊下車/站牌位置:老街溪河川教育中心站)<br> 
+              </div>
+            </div>
+          </div>
+        </div>
+        <img src="img/blue1.png" width="640"  height="664">
       </div>
     </div>
 
