--- a/event_4.html
+++ b/event_4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
     <meta http-equiv="Content-Language" content="zh-tw">
@@ -46,7 +46,7 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://lanternfestival.neocities.org/DM.html" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
         <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
         <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
@@ -91,6 +91,7 @@
           <div class='plan_boxs'><a href="event_3.html">日遊桃園夜賞燈會</a></div>
           <div class='plan_boxs'><a class='plan_ok' href="event_4.html">手作提燈</a></div>
           <div class='plan_boxs'><a href="event_5.html">合照送好禮</a></div>
+          <div class='plan_boxs'><a href="event_6.html">AR尋寶活動</a></div>
         </div>
 
         <div class='news_box'>
@@ -98,7 +99,13 @@
           <p class='add_type' title="每天開放現場報名時間：">17:30起30分鐘內、19:00起30分鐘內</p>
         </div>
 
-        <div class='news_box'><a href="">2020桃園燈會手作提燈館-心願認養：http://new.web-maker.com.tw/hand-made-lantern/adopt.html</a></div>
+        <div class='news_box'><a href="http://www.hand-made-lantern.org.tw/adopt.php">
+          2020桃園燈會手作提燈館-心願認養：http://www.hand-made-lantern.org.tw/adopt.php</a>
+         <img class='all_img' src="img/ee00.png" style='padding-top:20px;'>
+        </div>
+
+       
+
 
         <div class='show_boxs'>
           <div class='show_box'>
