交通圖片更新

--- a/traffic_02.html
+++ b/traffic_02.html
@@ -197,34 +197,35 @@
             <div class='sb_r'>
               <div class='s_name' title="免費接駁車：">綠線</div>
               <div class='s_type'>
-                六和停車場 → 機場捷運A21環北站 → 銀河曙光燈區 → 六和停車場
+                <!--六和停車場 → 機場捷運A21環北站 → 銀河曙光燈區 → 六和停車場-->
+              行駛動線：六和停車場→銀河曙燈區→六和停車場。<br>
+              站牌位置：六和停車場 (單邊上下車/站牌位置:中壢區公所站)；銀河曙燈區(單邊上下車/站牌位置:興國市場站)
+
               </div>
             </div>
           </div>
         </div>
-        <div class='video-container'>
+        <img class='all_img' src="img/green1.png">
+       <!-- <div class='video-container'>
           <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1vexH0Hiv6Cgj6BEg-1oF4seayD3Jmcxq" width="640" height="480"></iframe>
-        </div>
+        </div> -->
 
         <!-- 免費接駁車03 -->
         </br></br>
         <div class='show_boxs'>
           <div class='show_box'>
-            <div class='sb_l'><!--<img src="img/tt02.png">--></div>
-            <div class='sb_r sb_all'>
+            <div class='sb_l'><img src="img/tt03.png"></div>
+            <div class='sb_r'>
               <div class='s_name' title="免費接駁車：">藍線</div>
               <div class='s_type'>
-              燈會展區接駁車晚上6:00從機場捷運A21環北站開始 <br>
-
-              路線：機場捷運A21環北站->銀河曙光燈區->飛天曙光燈區->銀河曙光燈區->機場捷運A21環北站<br>
-              間距：20分鐘一班<br>
-              路線顏色：藍線<br>
-              站牌位置：銀河曙光燈區(雙邊下車/站牌位置:興國市場站)；飛天曙光燈區(單邊下車/站牌位置:老街溪河川教育中心站)<br> 
+              行駛動線：機場捷運A21環北站→銀河曙燈區→飛天曙光燈區→銀河曙燈區→機場捷運A21環北站。<br>
+              站牌位置：銀河曙光燈區(雙邊上下車/站牌位置:興國市場站)；飛天曙光燈區(單邊上下車/站牌位置:老街溪河川教育中心站)
+              <br> 
               </div>
             </div>
           </div>
         </div>
-        <img src="img/blue1.png" width="640"  height="664">
+        <img class='all_img' src="img/blue1.png">
       </div>
     </div>
 
